fixed floating social not being hidden by sidebar

--- a/src/components/Article/FloatingSocialMenu.module.scss
+++ b/src/components/Article/FloatingSocialMenu.module.scss
@@ -1,4 +1,5 @@
 .floatingSocialMenu {
+  z-index: 1;
   position: fixed;
   top: 50vh;
   right: 2rem;
