--- a/src/pages/Header/Header.module.scss
+++ b/src/pages/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import "/src/styles/variables";
 
 #header {
-  z-index: 1;
+  z-index: 10;
 
   position: sticky;
   top: 0;
